# openmc_render

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.h  color.h  constants.h  geom.cpp  geom.h  hit.h  material.h  ppm_demo.cpp  progress_bar.cpp  rand.h  ray.h  scene.cpp  scene.h  trace.h  tracer.cpp  util.h  vec3.h
images/: book_cover.ppm  three_spheres.ppm
include/: camera.h  geom.h  progress_bar.h
models/: demo_model.py  openmc_book_cover_model.py
src/: main.cpp  ppm_demo.cpp  teardown.h
weekend_raytrace/: Makefile  book_cover.py  color.cpp  constants.h  geom.cpp  geom.h  main.cpp  make_model.py  material.h  openmc_scenes.cpp  openmc_scenes.h  openmc_tracer.cpp  ray.h  ray_test.cpp  scene.cpp  scene.h  trace.cpp  tracer.cpp
